--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HW-10</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body                
+    <h1>Моя улюблена тваринка — кіт</h1>
 
-    <button class="btn">Купити!</button>
+    <p>
+        Мій улюблений домашній улюбленець — це кіт. 
+        Коти дуже розумні, незалежні та лагідні тварини. 
+        Вони люблять гратися та дарують гарний настрій.
+    </p>
 
-    <p class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea modi placeat quam suscipit,
-        officiis, animi sapiente harum excepturi rem nostrum voluptatem consequuntur vel, quo id
-        nam obcaecati error exercitationem laboriosam?
+    <p>
+        Коти бувають різних порід, кольорів та характерів. 
+        Вони добре ладнають з людьми та створюють затишок у домі.
     </p>
 
 </body>
