--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <title>HW-7</title>
 </head>
-<body                
-    <h1>Моя улюблена тваринка — кіт</h1>
+<body>
 
-    <p>
-        Мій улюблений домашній улюбленець — це кіт. 
-        Коти дуже розумні, незалежні та лагідні тварини. 
-        Вони люблять гратися та дарують гарний настрій.
-    </p>
+    <h1>Мої улюблені тварини</h1>
+    <ol start="6">
+        <li>Кіт</li>
+        <li>Собака</li>
+        <li>Папуга</li>
+    </ol>
 
-    <p>
-        Коти бувають різних порід, кольорів та характерів. 
-        Вони добре ладнають з людьми та створюють затишок у домі.
-    </p>
+    <h1>Зображення тварин</h1>
+
+    
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="Кіт" width="300">
+
+    <br><br>
+    
+    <img src="images/cat.jpg" alt="Домашній кіт" width="300">
 
 </body>
 </html>
